k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: evolipia-radar
  labels:
    app.kubernetes.io/name: evolipia-radar
    app.kubernetes.io/managed-by: helm
