k8s/base/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: evolipia-radar
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
