k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: evolipia-radar
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
